sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_singles__tests__snapshots__base_3_sample_2.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_singles.rs
description: Strategy NakedSingles executed on grid base_3_sample_2
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │ 4   │ 4   ║
    - ║     │  89 │     ║ 7 9 │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║  23 │     │  2  ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║   9 │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║  23 │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║   6 │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1 3 │   3 ║     │     │   3 ║   3 │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │  23 │     ║     │     │     ║     │   3 │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║   3 │   3 │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │   3 ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  56 │  4  │  2  ║  8  │   6 │     ║
    - ║     │     │     ║ 7 9 │     │     ║     │   9 │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │ 4   │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  56 │  5  │   6 ║   6 │  1  │  3  ║
    - ║  8  │     │     ║  89 │  89 │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r2c4: set value 9, because of: r2c4: candidate 9"
    - "r2c8: set value 2, because of: r2c8: candidate 2"
    - "r4c7: set value 3, because of: r4c7: candidate 3"
    - "r5c2: set value 3, because of: r5c2: candidate 3"
    - "r6c8: set value 7, because of: r6c8: candidate 7"
    - "r7c7: set value 4, because of: r7c7: candidate 4"
    - "r8c5: set value 6, because of: r8c5: candidate 6"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │     │ 4   ║
    - ║     │  89 │     ║ 7   │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║   3 │     │     ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║     │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║   3 │     │     ║
    - ║     │  4  │  7  ║  1  │  9  │  8  ║   6 │  5  │  2  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │     ║     │     │   3 ║     │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │     ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │  2  │     ║     │     │     ║     │     │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │  3  │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║     │   6 │  3  ║  4  │  2  │     ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │     ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  5  │  4  │  2  ║  8  │   6 │  7  ║
    - ║     │     │     ║   9 │     │     ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │  4  │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  5  │  5  │  6  ║     │  1  │  3  ║
    - ║  8  │     │     ║  89 │  8  │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 2
          column: 4
        candidates:
          - 9
    actions:
      - position:
          row: 2
          column: 4
        setValue: 9
  - reasons:
      - position:
          row: 2
          column: 8
        candidates:
          - 2
    actions:
      - position:
          row: 2
          column: 8
        setValue: 2
  - reasons:
      - position:
          row: 4
          column: 7
        candidates:
          - 3
    actions:
      - position:
          row: 4
          column: 7
        setValue: 3
  - reasons:
      - position:
          row: 5
          column: 2
        candidates:
          - 3
    actions:
      - position:
          row: 5
          column: 2
        setValue: 3
  - reasons:
      - position:
          row: 6
          column: 8
        candidates:
          - 7
    actions:
      - position:
          row: 6
          column: 8
        setValue: 7
  - reasons:
      - position:
          row: 7
          column: 7
        candidates:
          - 4
    actions:
      - position:
          row: 7
          column: 7
        setValue: 4
  - reasons:
      - position:
          row: 8
          column: 5
        candidates:
          - 6
    actions:
      - position:
          row: 8
          column: 5
        setValue: 6
